public class Motor{
   private int gear; 

   public Motor(){
       gear=0;
   }
   public void getGear()
    {
        return gear;
    }
    public void setGear(int gear)
    {
        this.gear=gear;
    }
}