public class Ventanas{
    private Ventana(){}
    public Ventana(String typeWindow){
        this.typeWindow=typeWindow;
    }
    private String typeWindow;
}